--- a/large.css
+++ b/large.css
@@ -1,5 +1,7 @@
 .container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     width: 100%;
 }
@@ -30,7 +32,8 @@
     flex-direction: row;
     align-items: center;
     overflow: hidden;
-    position: absolute;
+    position: relative;
+    z-index: 1000;
     width: 100%;
     top: 0px;
     background: black;
@@ -75,25 +78,24 @@
 }
 
 .fill-background {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+    display: block;
     width: 100%;
-    margin-top: 0;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
 }
 
-.backround-image {
-    background-image: url('https: //rededition.com/wp-content/uploads/2023/11/Design-sans-titre-7-1-1440x725-c-bottom.jpg');
+.background-image {
+    position: absolute;
+    top: 0;
+    background-image: url('https://rededition.com/wp-content/uploads/2023/11/Design-sans-titre-7-1-1440x725-c-bottom.jpg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    height: 60rem;
-    margin-top: -2rem;
-    margin-left: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
+    margin-top: 0rem;
+    width: 100%;
+    z-index: 1;
 }
 
 
@@ -135,8 +137,8 @@
 
 .image-discover {
     position: absolute;
-    top: 80%;
-    left: 0%;
+    top: 60%;
+    left: 15%;
 }
 
 .image-heading-sz {
@@ -155,22 +157,32 @@
     display: flex;
     flex-wrap: wrap;
     flex: 1;
-    /* align-items: center; */
     justify-content: space-evenly;
     gap: 1;
 }
 
-
-.card {
+.card-holder-div {
     display: flex;
-    flex: 1;
-    width: auto;
-    height: fit-content;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 1rem 10rem;
+    margin-top: 100vh;
+    position: relative;
+    z-index: 10;
+    z-index: 2;
 }
 
+.card {
+    flex: 1 0 5rem;
+    box-sizing: border-box;
+    margin: 1rem;
+}
 
-.container {
-    padding: 2px 16px;
+.card img {
+    max-width: 100%;
+    height: auto;
 }
 
 .flex {
