--- a/small.css
+++ b/small.css
@@ -1,17 +1,36 @@
-@media (max-width: 980px) {
-    .header-style {
-        display: none;
+    @media (max-width: 980px) {
+        .header-style {
+            display: none;
+        }
+
+        .mobile-header {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            overflow: hidden;
+            position: relative;
+            z-index: 1000;
+            top: 0px;
+            background: transparent;
+            justify-content: space-between;
+            height: 5rem;
+        }
+
+        .card-holder-div {
+            flex-direction: column;
+        }
     }
 
-    .mobile-header {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        overflow: hidden;
-        position: absolute;
-        top: 0px;
-        background: transparent;
-        justify-content: space-between;
-        height: 5rem;
+    @media (min-width: 768px) {
+        .card img {
+            min-width: 300px;
+            min-height: 500px;
+        }
     }
-}
+
+    @media (max-width: 767px) {
+        .card img {
+            min-width: 230px;
+            min-height: 250px;
+        }
+    }
