--- a/small.css
+++ b/small.css
@@ -19,14 +19,16 @@
         .card-holder-div {
             flex-direction: column;
         }
-    }
 
-    @media (min-width: 768px) {
-        .card img {
-            min-width: 300px;
-            min-height: 500px;
+        .footer-style {
+            display: flex;
+            flex-direction: column;
+            height: 35rem;
+            margin-bottom: 0;
+            padding-bottom: 0;
         }
     }
+
 
     @media (max-width: 767px) {
         .card img {
